# py_gen_server

./: .gitignore  README.md  pyproject.toml  static_checks.sh
src/py_gen_server/: __init__.py  actor.py
tests/: test_actor.py
