[project]
name = "py-gen-server"
version = "0.0.0"
description = "Erlang-style generic server (GenServer) actors"
readme = "README.md"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
